# redis

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: ConfigWarnings.cmake  Sanitizers.cmake
scripts/: analyze_memory.sh  format_code.sh  run_valgrind.sh
src/: CMakeLists.txt  client  client.cpp  server  server.cpp
tests/: CMakeLists.txt
